New in master
=============

Features
--------
* Add META_GENERATOR_TAG option in conf.py allowing the meta generator
  to be disabled if needed. (Issue #2628)

Bugfixes
--------

New in v7.8.3
=============

Emergency bugfix release (``nikola new_page`` did not work in v7.8.2).

Features
--------

* Sort posts chronologically with one unified function (easier to
  change). (Issue #2627)
* Sort posts in the following order (most important last): source path
  (A-Z), title (A-Z), date (reverse chronological order), priority
  meta number (descending). (Issue #2627)

Bugfixes
--------

* Fix a bug that prevents ``nikola new_page`` from working (Issue #2631)

New in v7.8.2
=============

**Minor API change:** The ``compile_string`` compiler method (partially
internal) now takes a post argument and returns between two and four
values, adding ``shortcode_deps`` and shortcode support. See issues
#2623 and #2624.

Features
--------

* Add meta generator tag to default templates to promote Nikola
  (Issue #2619)
* Add ``nikola new_post -d`` and ``NEW_POST_DATE_PATH`` to allow
  automatic creation of year/month/day (date-based) directory
  structures (Issue #2513)
* Allow enabling pretty URLs with per-post setting (Issue #2613)
* Add a ``sort_posts`` function (available as Jinja filter in global
  context), which allows general-purpose timeline sorting (Issue
  #2602)
* Allow creating archive navigation (Issue #1639)
* Accept a ``page`` argument for taxonomy paths (Issue #2585)
* Query strings in magic links are passed as keyword arguments to path
  handlers (via Issue #2580)
* Accept arbitrary arguments to path handlers (via Issue #2580)
* Added new ``typogrify_oldschool`` filter (Issue #2574)
* Improving handling of .dep files, and allowing compilers to specify
  additional targets for the ``render_posts`` task (Issue #2536)
* ``render_template`` and ``generic_renderer`` can now create HTML
  fragments.
* Allow posts to set custom ``URL_TYPE`` by using the ``url_type``